# c2j-native-deobfuscator

./: .gitignore  README.md  README.zh-CN.md
.claude/skills/j2c-deobfuscate/: SKILL.md
docs/: ARCHITECTURE.md  ROADMAP.md  adding-obfuscator-profile.md  deferred-features.md  emulation-recovery.md  manual-restoration.md  project-structure.md  static-reverse-approach.md
ghidra/scripts/: ApplyJ2CDataTypes.java  DumpFromManifest.java  DumpJ2CDecompiledFunctions.java  ExtractRegisterNatives.java
jvm/: build.gradle.kts  settings.gradle.kts
jvm/class-rebuilder/: build.gradle.kts
jvm/class-rebuilder/src/main/kotlin/j2c/classrebuilder/: AsmEmitter.kt  BytecodeNormalizer.kt  Main.kt  TraceClassGen.kt
jvm/common/src/main/kotlin/j2c/common/: HashUtils.kt  JsonIO.kt  Schema.kt
jvm/dynamic-trace-agent-java/: build.gradle.kts
jvm/jar-parser/: build.gradle.kts
jvm/jar-parser/src/main/kotlin/j2c/jarparser/: Main.kt
jvm/trace-to-bytecode/: build.gradle.kts
jvm/trace-to-bytecode/src/main/kotlin/j2c/tracetobc/: Main.kt  StackBalancer.kt
native/: CMakeLists.txt  build.sh
native/include/: jni_hook.hpp  trace_writer.hpp
native/src/: agent.cpp  jni_hook.cpp  trace_writer.cpp
py/: pyproject.toml
py/ast_matcher/: pyproject.toml
py/ast_matcher/ast_matcher/: __init__.py  cli.py  core.py  jni_vtable.py
py/ast_matcher/ast_matcher/lifter/: __init__.py  driver.py  if_guard.py  jni_call.py  options.py  syms.py  throw_reason.py
py/ast_matcher/tests/: test_lifter.py
py/binary_introspect/: pyproject.toml
py/binary_introspect/binary_introspect/: __init__.py  cache_table.py  cli.py  core.py  jni_tables.py  profile.py  stub_recovery.py
py/binary_introspect/binary_introspect/arch/: __init__.py  amd64_sysv.py  amd64_windows.py  base.py
py/j2c_dumper_cli/: pyproject.toml
py/j2c_dumper_cli/j2c_dumper_cli/: __init__.py  main.py
py/manifest_merge/: pyproject.toml
py/manifest_merge/manifest_merge/: __init__.py  cli.py  core.py
py/native_emulate/: README.md  j2c_emu.py
py/snippet_importer/: pyproject.toml
py/snippet_importer/snippet_importer/: __init__.py  cli.py  core.py
schemas/: binary.schema.json  classes.schema.json  manifest.schema.json  recovered-method.schema.json  trace-event.schema.json
screenshots/: README.md
tests/e2e/: test_pipeline.sh
tools/: assess_recovery.py
