[project]
name = "ast-matcher"
version = "0.1.0"
description = "tree-sitter-c based AST matcher for Ghidra-decompiled pseudo C"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23.2",
    "tree-sitter-c>=0.23.4",
    "click>=8.1.7",
]

[project.scripts]
ast-matcher = "ast_matcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ast_matcher"]
