[project]
name = "binary-introspect"
version = "0.1.0"
description = "Parse PE/ELF .dll/.so produced by native-obfuscator-style transpilers"
requires-python = ">=3.10"
dependencies = [
    "lief>=0.15.1",
    "click>=8.1.7",
]

[project.scripts]
binary-introspect = "binary_introspect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["binary_introspect"]
