[project]
name = "j2c-dumper-cli"
version = "0.1.0"
description = "Top-level orchestrator for j2c-dumper"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.1",
    "rich>=13.7.0",
    "binary-introspect",
    "manifest-merge",
    "ast-matcher",
]

[project.scripts]
j2c-dumper = "j2c_dumper_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["j2c_dumper_cli"]
