[project]
name = "manifest-merge"
version = "0.1.0"
description = "Merge classes.json + binary.json into a manifest.json"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
manifest-merge = "manifest_merge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manifest_merge"]
