[project]
name = "snippet-importer"
version = "0.1.0"
description = "Optional: import native-obfuscator cppsnippets.properties as AST hints"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
snippet-importer = "snippet_importer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snippet_importer"]
